# munch-group-project

./: .nojekyll  README.md  _quarto.yml  index.html  pixi.toml  pyproject.toml  search.json  workflow.html
.github/workflows/: quarto-publish.yml
docs/: README.md
docs/pages/: overview.ipynb
manuscript/: index-preview.html  index.docx  index.html  index.out.ipynb
manuscript/_tex/: index.tex
notebooks/: example.html
scripts/: docs-run-notebooks.sh  rename.py
slides/: index.html
thesis/: index-preview.html  index.html  index.out.ipynb
thesis/_tex/: index.tex
