[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "munch-group-project"
version = "0.1.1.rc1"
description = "Project description"
authors = [
    {name = "Your Name", email = "your@email.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "cryptography",
    "jupyterlab>=4",
    "nbdime", 
    "seaborn",
    "scipy",
    "scikit-learn",
    "statsmodels",
]

[project.urls]
Homepage = "https://github.com/munch-group/munch-group-project"
Repository = "https://github.com/munch-group/munch-group-project"
Documentation = "https://munch-group.org/munch-group-project"

[project.scripts]
munch-group-project = "munch_group_template:munch_group_template"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["test*"]

[tool.setuptools.package-data]
munch_group_template = ["data/*.txt", "data/*.csv", "data/*.pickle", "data/*.h5"]

[tool.pixi.workspace]
channels = ["conda-forge", "munch-group"]
platforms = ["osx-arm64", "win-64", "osx-64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.9"
git = ">=2.51.0,<3"
gh = ">=2.79.0,<3"
quartodoc = ">=0.11.1,<0.12"
pip = ">=25.2,<26"

# [tool.pixi.pypi-dependencies]
# Optional PyPI dependencies can be added here
# Note: Some packages may not be available across all platforms

[tool.pixi.environments]
default = {solve-group = "default"}
dev = {features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.dependencies]
pytest = "*"
setuptools = ">=65.0"
wheel = "*"
anthropic = "*"
gitpython = "*"
rpds-py = "*"
jsonschema = "*"
git = "*"
git-lfs = "*"
gh = "*"
conda-build = "*"
cryptography = "*"
jupyterlab = ">=4"
nbdime = "*"
nodejs = "*"
seaborn = "*"
pytables = "*"
pip = "*"
